# idos-py

./: .gitignore  README.md  pyproject.toml
idos/: __init__.py  cli.py  core.py  ratelimit.py
